--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
 <body>
 <!--  app start -->
 
-<nwt-root>
+<ybd-root>
   <div class="loader">
     <svg class="circular">
       <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
   </div>
-</nwt-root>
+</ybd-root>
 
 <!--  app end -->
 </body>
